Version 2.30 - 22 Dec 2015 by Thierry Vignaud

- sync with kernel-4.4

Version 2.29 - 4 Dec 2015 by Thierry Vignaud

- sync with kernel-4.3

Version 2.28 - 27 Aug 2015 by Thierry Vignaud

- sync with kernel-4.1

Version 2.24 - 8 May 2015 by Thierry Vignaud

- include r8723bs (mga#15874)

Version 2.19 - 7 April 2015 by Thomas Backlund

- create efi loader at build time

Version 2.18 - 6 April 2015 by Anne Nicolas

- use noiswmd as default boot option (mga#11105)

Version 2.17 - 17 March 2015 by Thierry Vignaud

- include virtio_rng

Version 2.16.1 -  6 July 2015 by Per Øyvind Karlsen <proyvind@moondrake.org>

- drop /lib/udev/rules.d/60-keyboard.rules as it's dropped from systemd
  (don't know implications of for now at least...)
- add support for specifying what keytable to load with a kernel argument
- compress grub files with xz

Version 2.16 - 28 January 2015 by Thierry Vignaud

- sync with kernel-3.19
- add efibootmgr on x86_64

Version 2.15 - 20 December 2014 by Thierry Vignaud

- sync with kernel-3.18 (mga#14799)

 Version 2.14 - 20 December 2014 by Thierry Vignaud

- include new 3.18 USB host drivers (mga#14799)

Version 2.12 - 12 December 2014 by Thierry Vignaud

- include hv_balloon & hyperv_fb
- include virtio_balloon & vmw_balloon as well

Version 2.10 - 22 August 2014 by Thierry Vignaud

- set $NLSPATH to read locale from /usr/share/locale rather than /usr/lib/locale
- fix correct path of /bin/loadkeys
- sync with kernel-3.17
- include paravirtual network driver for hyper-v

Version 2.11 -  4 July 2014 by Per Øyvind Karlsen <proyvind@moondrake.org>

- update to kernel-nrj-2.14.10-1
- rename from 'rescue' to 'ucDrakx' for prompt & hostname

Version 2.10 - 23 June 2014 by Per Øyvind Karlsen <proyvind@moondrake.org>

- fix broken title text in grub theme

Version 2.9 - 23 June 2014 by Per Øyvind Karlsen <proyvind@moondrake.org>

- use /etc/fstab from setup package

Version 2.8 - 22 June 2014 by Per Øyvind Karlsen <proyvind@moondrake.org>
