@@ -1,194 +1,0 @@
-- fix reinstalling grub2 on UEFI (mga#15695)
-
-Version 1.28 - 18 September 2012, by Per Øyvind Karlsen
-
-- drop 'lsparts', it's usefulness over just invoking 'blkid' directly is rather
-  questionable
-- ship with correct gconv modules for lib64
-- replace 'ftp' with 'ncftp' as it's more user friendly and doesn't pull in
-  additional library dependencies
-- don't bother shipping host as together with it's dependencies pulled, it
-  increases size of the compressed squashfs image by almost 1MB alone, without
-  providing much additionally useful functionaly..
-- use scp from dropbear rather than openssh
-- open rescue-gui on tty1
-
-Version 1.27 -  9 August 2012, by Per Øyvind Karlsen
-
-- make sure that we still have syslogd & klogd running after switching from
-  stage1
-- fix dropbear startssh script to work with busybox
-- replace openssh 'ssh' client with dropbear's 'dbclient'
-- drop ldconfig from image
-- compile and link 'drvinst' & lspcidrake directly into stage1 binary in order
-  to save space and make it available from earlier on
-- use smaller binary keymap dumps which can be loaded by busybox' 'loadkmap'
-- get rid of tons of obsolete scripts, configs and what not we no longer
-  have any need for
-- load btrfs module
-- fix inittab ctrlaltdel action
-
-Version 1.26 -  6 August 2012, by Per Øyvind Karlsen
-
-- do all mounting in stage 1
-- adapt to latest systemd/udevd
-
-Version 1.25 - 26 June 2012, by Per Øyvind Karlsen
-
-- strip all binaries
-- drop gdisk as it pulls in ie. 18MB libicudata library
-- increase squasfs block size to 1MB
-- replace perl implementation of 'rescue-doc' with a shell script
-- port perl implementation of 'drvinst' to C
-- fix issue with additional ttys not being used
-- use x86 lzma filter for compression of squashfs image
-- don't bundle copy of busybox with rescue image, we'll just reuse the one
-  bundled with initrd
-- use overlayfs for new root rather than symlinks
-- don't store extended attributes
-- support USE_LOCAL_STAGE1
-- drop locale support
-- use busybox to provide most tools
-- generate /etc/issue with 'linux_logo'
-
-Version 1.24 -  6 June 2012, by Per Øyvind Karlsen
-
-- add DESTDIR install support
-- revert to "linux" terminfo
-- stop fixing the raid udev rule now that it has been fixed
-
-Version 1.23 - 25 May 2012, by Per Øyvind "Awesome" Karlsen
-
-- include missing modules when SMB appears in fstab (mga#5850)
-- fix detecting RAID (mga#5048)
-- fix modprobe to support being called by kernel (mga#5274)
-- default to "screen" instead of "linux" terminfo (mga#4894)
-- include "screen" terminfo (mga#4894)
-- 32bit grub needs 32 bit loader (mga#5191)
-- add chrooted rescue system in PATH
-- escape / in generated passwords in startssh
-- add trailing ; in command lists in startssh
-- do not symlink /dev (mga#1023)
-- really fix mounting /dev/pts & /dev/shm (mga#1023)
-- fix mounting /dev/pts & /dev/shm (mga#1023)
-- enable autologin on all consoles
-- include mkfs.nilfs2 & nilfs-tune
-- include more udev rules for RAID (mga#5048)
-- switch to udev
-- mount /proc in chroot
-- drop support for squashfs3
-- only consider fstab from the selected fs
-- prefer Mandriva root partitions
-- enable rescue through serial line (mga#2052)
-- fix mounting / (mga#3327)
-- fix mounting / on LV
-- fix mounting / on soft RAID or crypted LV (mga#3778 & mga#448)
-- include xz for xz modules
-- add screen
-- add dropbear
-- add genpasswd and startssh
-- add /etc/shells
-- fix build with perl-5.14
-- add missing libfuse.so.2 for mount.ntfs-3g (#1189)
-- include /etc/netconfig (needed by mount.nfs)
-
-Version 1.18 - 13 April 2010, by Olivier "blino" Blin
-
-- image restore script: use blkid instead of deprecated vol_id
-
-Version 1.17 - 12 April 2010, by Olivier "blino" Blin
-
-- Handle LVM (#44723)
-- image restore script: handle hybrid images (by matching main device)
-
-Version 1.16 - 9 October 2009, by Olivier "blino" Blin
-
-- work both with squashfs 3 and 4
-- image restore script (from Paulo Ricardo Zanoni):
-  o re-read partition table after writing image
-  o do not extend / to the end of the disk, it overlaps with swap
-    partition
-- do not make de-latin1 keymap a symlink/include loop (#45109)
-- use extipl from /usr/lib/extipl on x86_64 too
-  (to fix restore_ms_boot, hardcoding this path)
-
-Version 1.15 - 3 September 2009, by Thierry Vignaud
-
-- add back dumpe2fs
-- run /oem-rescue.sh if oem option is present on cmdline
-- allow to specify main partition in the restore config file
-  (MAIN_PART_NUMBER), if there is a restore partition at beginning of
-  disk
-- load ext4 module (#48816)
-- use blkid instead of vol_id which we no longer ship
-
-Version 1.14 - 27 May 2009, by Olivier "blino" Blin
-
-- adapt to new extipl location in x86_64
-- adapt to new magic.mgc location
-
-Version 1.13 - 27 May 2009, by Olivier "blino" Blin
-
-- include various commands
-- image restore script:
-  o better estimate of image dump progression
-  o fix detecting multiple partitions to avoid win32 detection
-  o fix guessing extension when filename contains a dot
-
-Version 1.12 - 20 February 2009, by Olivier "blino" Blin
-
-- image restore script:
-  o add swap partition
-  o use a minimum size for disks to be detected (Caio)
-  o resize Windows partitions if needed (Caio)
-- Flash rescue:
-  o add support for Flash 2009
-  o try to load squashfs-lzma too
-  o handle path to lzma distrib loopbacks
-- fix build:
-  o do not include dead parsehdlist
-  o do not include dead rpm helpers
-
-Version 1.11 - 25 September 2008, by Olivier "blino" Blin
-
-- add image restoration scripts ("restore" command line parameter)
-
-Version 1.10 - 25 April 2008, by Olivier "blino" Blin
-
-- fix "Mounting other partitions from fstab" which use UUID=xxx
-- fix build with latest file package, which only includes the
-  precompiled magic file
-
-Version 1.9 - 10 March 2008, by Olivier "blino" Blin
-
-- handle ntfs-3g in fstab
-- add missing modalias files (#38690)
-
-Version 1.8 - 28 February 2008, by Olivier "blino" Blin
-
-- support new modules location (#38207)
-- adapt to perl 5.10
-- fix build (fix a workaround in partimage_whole_disk)
-
-Version 1.7 - 25 September 2007, by Pascal "Pixel" Rigaux
-
-- add mount.nfs binary (since mount doesn't handle nfs fs anymore)
-
-Version 1.6 - 8 August 2007, by Pascal "Pixel" Rigaux
-
-- adapt to new libldetect together with drakx-installer-images 1.13
-- loadkeys file:
-  o handle new "kbd" rpm which have .map files instead of .kmap
-  o don't skip fr_CH-latin1
-  o handle "fr_CH"-like short names
-- remove rescuept (use testdisk instead, which is much nicer)
-
-Version 1.5 - 9 July 2007, by Pascal "Pixel" Rigaux
-
-- add /etc/mke2fs.conf in order to format ext3fs with 4k blocks (#27377)
-- add "mkfs.ext3" which is no more equivalent to "mkfs.ext2 -J"
-  (eg: dir_index & resize_inode features)
-
-Version 1.4 - 4 April 2007, by Pascal "Pixel" Rigaux
-
-- zcat and gunzip can't be symlinks anymore, they are scripts
