@@ -1,3 +1,5 @@
+- drop (broken) support for Alpha, IA64 & PPC, Sparc
+
 Version 2.30 - 22 Dec 2015 by Thierry Vignaud
 
 - sync with kernel-4.4
